--- a/index.css
+++ b/index.css
@@ -191,21 +191,19 @@ section a:hover {
 
 /* === PROJECT CARDS === */
 #projects-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-auto-rows: min-content;
-
-  gap: 1.5rem;
-  position: relative;
+  /* Masonry effect */
+  columns: 1;
+  column-gap: 1.5rem;
 }
 #projects-grid article {
   background: var(--secondary-color);
   border-radius: 8px;
   overflow: hidden;
   max-width: 300px;
-  margin: 0 auto;
+  margin: 1rem auto;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease;
+  break-inside: avoid;
 }
 
 #projects-grid article:hover {
@@ -322,5 +320,23 @@ section a:hover {
 
   section {
     padding: 30px 15px;
+  }
+}
+
+/* medium screen */
+@media (min-width: 768px) and (max-width: 1024px) {
+  /* === PROJECT CARDS === */
+  #projects-grid {
+    /* Masonry effect */
+    columns: 2;
+  }
+}
+
+/* large screen */
+@media (min-width: 1024px) {
+  /* === PROJECT CARDS === */
+  #projects-grid {
+    /* Masonry effect */
+    columns: 3;
   }
 }
