--- a/index.css
+++ b/index.css
@@ -90,10 +90,10 @@ header.banner::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("https://images.unsplash.com/photo-1504164996022-09080787b6b3?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-image: url("./assets/banner.png");
   background-size: cover;
-  background-position: center;
-  filter: brightness(0.6); /* Darken image */
+  background-position: bottom;
+  /* filter: brightness(0.6); Darken image */
 }
 
 .banner-content {
